--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -3,4 +3,7 @@
     <string name="password">Password</string>
     <string name="username">Username</string>
     <string name="sign_in_button_text">Sign in</string>
+    <string name="email">Email</string>
+    <string name="register_button_text">Sign Up</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
