--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="approve_text">Approve</string>
     <string name="reject_text">Reject</string>
     <string name="reject_reason_text">Değişiklik nedeni</string>
+    <string name="title_activity_admin">AdminActivity</string>
+    <string name="title_expenses">Expenses</string>
+    <string name="title_history">History</string>
+    <string name="title_reports">Reports</string>
+    <string name="pay_text">Pay</string>
 </resources>
