--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,15 @@
     <string name="title_history">History</string>
     <string name="title_reports">Reports</string>
     <string name="pay_text">Pay</string>
+    <string name="expense_type_taxi">Taxi</string>
+    <string name="expense_type_food">Food</string>
+    <string name="expense_type_accommodation">Accommodation</string>
+    <string name="expense_type_gas">Gas</string>
+    <string name="expense_type_other">Other</string>
+    <string name="filtering_options">Filtering Options</string>
+    <string name="paid">Paid</string>
+    <string name="approved">Approved</string>
+    <string name="waiting">Waiting</string>
+    <string name="rejected">Rejected</string>
+    <string name="change_status">Change Status</string>
 </resources>
