added expense list in admin

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -30,6 +30,8 @@
     <string name="waiting">Waiting</string>
     <string name="rejected">Rejected</string>
     <string name="change_status">Change Status</string>
+    <string name="filter">Filter</string>
+    <string name="cancel">Cancel</string>
     <string-array name="expense_types">
         <item>Gas</item>
         <item>Taxi</item>
