--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="waiting">Waiting</string>
     <string name="rejected">Rejected</string>
     <string name="change_status">Change Status</string>
+    <string name="filter">Filter</string>
+    <string name="cancel">Cancel</string>
 </resources>
