--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="change_status">Change Status</string>
     <string name="filter">Filter</string>
     <string name="cancel">Cancel</string>
+    <string name="total">Total</string>
 </resources>
