--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -39,6 +39,7 @@
     <string name="currency_type_validation">Currency type cannot be empty</string>
     <string name="expense_type_validation">Expense type cannot be empty</string>
     <string name="expense_type_added_successfully">Expense type added successfully</string>
+    <string name="userExpenses">User Expenses</string>
     <string-array name="expense_types">
         <item>Gas</item>
         <item>Taxi</item>
