--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="waiting_expenses_text">Waiting Approval Expenses</string>
     <string name="approve_text">Approve</string>
     <string name="reject_text">Reject</string>
-    <string name="reject_reason_text">Değişiklik nedeni</string>
+    <string name="reject_reason_text">Change request description</string>
     <string name="title_activity_admin">AdminActivity</string>
     <string name="title_expenses">Expenses</string>
     <string name="title_history">History</string>
@@ -60,4 +60,16 @@
     <string name="expense_type_validation">Expense type cannot be empty</string>
     <string name="expense_type_added_successfully">Expense type added successfully</string>
     <string name="userExpenses">User Expenses</string>
+    <string name="daily_expenses">Daily Expenses</string>
+    <string name="ok">OK</string>
+    <string name="change_request">Change Request</string>
+    <string name="email_validation">Email cannot be empty</string>
+    <string name="email_validation_error">Please enter a valid email</string>
+    <string name="password_validation">Password cannot be empty</string>
+    <string name="register_successfully">Register operation successfully</string>
+    <string name="password_match_validation">Passwords do not match</string>
+    <string name="username_validation">Username cannot be empty</string>
+    <string name="email_or_username_validation">Email or username cannot be empty</string>
+    <string name="transaction_successfully">Your transaction has been completed successfully</string>
+    <string name="email_or_username">Email or username</string>
 </resources>
