--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,7 @@
     <string name="expense_added_successfully">Expense added successfully</string>
     <string name="date_format_validation">Invalid date</string>
     <string name="payment_complated">Payment complated</string>
+    <string name="expense_updated_successfully">Expense updated successfully</string>
+    <string name="user_monthly_expenses">User Monthly Expenses</string>
+    <string name="monthly_expenses_chart">Monthly Expenses Chart</string>
 </resources>
